# Agentc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  main.tex  orchestration-CLAUDE.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
bench/: __init__.py  build_gaia_fixture.py  build_hotpot_fixture.py  build_long_context_fixture.py  build_wikipedia_qa_fixture.py  calibrate.py  harness.py  optimizer_ablation.py  optimizer_bench.py  overhead.py  paired_analysis.py  report.py  run.py  run_ablation.sh  run_autogen_warmup_n200.py  run_cc_sd_subadd_rerun.py  run_cc_sd_subadditivity_warmup.py  run_composition_check.py  run_concurrency_bench.py  run_density_sweep.py  run_gaia_warmup.py  run_generalization_evals.py  run_hotpot_ablation.py  run_hotpot_warmup_n300.py  run_lcqa_warmup.py  run_lcqa_warmup_n300.py  run_md_cc_orthogonality_rerun.py  run_md_cc_orthogonality_warmup.py  run_oracle_baseline.py  run_paper_ablation.sh  run_planner_ablation_rerun.py  run_pushback_ablation.sh  run_rag_warmup_n200.py  run_refiner_warmup.py  run_scaleup_ablation.py  run_sd_precondition_warmup.py  run_targeted_ablation.sh  summarize_paired.py  test_benchmark.py  validate.py
bench/agents/: __init__.py  _fixtures.py  _runtime.py  adaptive_router.py  autogen_bridge.py  batch_classifier.py  composition_qa.py  debug_agent.py  gaia_router.py  hotpot_oracle.py  hotpot_qa.py  iterative_refiner.py  iterative_refiner_allread.py  llmlingua_baseline.py  long_context_qa.py  long_context_qa_anthropic.py  long_context_qa_concurrent.py  long_context_qa_hf.py  multiagent_research.py  multirule_qa.py  parallel_research.py  rag_summarizer.py  research_planner.py  support_qa.py  swebench_planner.py
bench/build_fixtures/: __init__.py  __main__.py  _common.py  gaia.py  multiagent.py  rag.py  swebench.py
bench/paper_figures/: fig1_architecture.py  fig2_twogatepipeline.py  fig3_headline_savings.py  fig4_methodology.py  fig4_provider_generalization.py  fig5_density_sweep.py  fig5_llmlingua_dualregime.py  fig6_composition_orthogonality.py  fig7_overhead_scaling.py  fig_concurrency.py
bench/paper_results/: DATA_MANIFEST.txt  agent_diversity.csv  agent_diversity.summary.txt  agentc_hotpot_n100.csv  agentc_hotpot_n100.summary.txt  autogen_bridge-n200-warmup.csv  autogen_bridge_composition_check.csv  autogen_bridge_warmup_n200.csv  autogen_bridge_warmup_n200_warmup_stats.csv  cc_sd_composition.csv  cc_sd_composition.summary.txt  cc_sd_subadd_rerun.csv  cc_sd_subadd_rerun.summary.txt  cc_sd_subadditivity_warmup.csv  cc_sd_subadditivity_warmup.summary.txt  coldstart_curve.csv  coldstart_curve.summary.txt  composition_ablation.csv  composition_ablation.summary.txt  composition_ablation_n100.csv  composition_ablation_n100.summary.txt  composition_qa-planner-ablation-n50-warmup.csv  concurrency_bench.csv  concurrency_bench_summary.csv  density_sweep.csv  finalize_overnight.sh  gaia_router-modeldowngrade-n127-warmup.csv  gaia_router-modeldowngrade-n127.csv  gaia_router_warmup_n127.csv  gaia_router_warmup_n127_dispatched.csv  gaia_router_warmup_n127_warmup_stats.csv  generalization_activation.csv  generalization_evals.csv  generalization_evals.summary.txt  (+50 more)
crates/agentc-analyzer/: Cargo.toml
crates/agentc-analyzer/src/: cost.rs  lib.rs  report.rs  waste.rs
crates/agentc-cli/: Cargo.toml
crates/agentc-cli/src/: helpers.rs  main.rs
crates/agentc-core/: Cargo.toml  build.rs
crates/agentc-core/src/: db.rs  embedding.rs  hardening.rs  lib.rs  merge.rs  span.rs  storage.rs
crates/agentc-core/src/data/: .gitignore
crates/agentc-embed/: Cargo.toml
crates/agentc-embed/data/: hyperplanes.f32
crates/agentc-embed/src/: hyperplane_gen.rs  lib.rs  lsh.rs  model.rs
crates/agentc-embed/tools/: gen_hyperplanes.rs
crates/agentc-memo/: Cargo.toml
crates/agentc-memo/src/: cache.rs  canonical.rs  eviction.rs  ffi.rs  key.rs  lib.rs  lsh.rs  schema.rs
crates/agentc-optimizer/: Cargo.toml
crates/agentc-optimizer/src/: audit.rs  budget.rs  composition.rs  config.rs  cost_model.rs  dag.rs  dag_context.rs  ffi.rs  lib.rs  planner.rs  reporting.rs  schema.rs  shadow.rs  wiring.rs
crates/agentc-optimizer/src/rules/: cache_hit.rs  context_compress.rs  dead_output_truncation.rs  mod.rs  model_downgrade.rs  output_budget.rs  parallel_branch.rs  prompt_dedup.rs  state_drop.rs  structured_truncation.rs
crates/agentc-optimizer/tests/: cold_path.rs  fail_open.rs  hot_path.rs  rules_integration.rs
crates/agentc-profiler/: Cargo.toml
crates/agentc-profiler/src/: lib.rs
data/: pricing.json
paper-intelligence/: AGENTS.md  README.md  agentc-paper-intelligence-workplan.md  artifact-inventory.md  bibliography-ledger.md  citation-gap-list.md  claim-bank.md  claims-gaps-and-risks.md  current-fit-and-publishability.md  decision-log.md  deep-research-inbox.md  deep-research-prompt-templates.md  draft-paper-edits.md  draft-related-work-expansion.md  evidence-and-sources.md  experiment-run-log.md  handoff.md  idea-bank.md  idea-generation-protocol.md  literature-and-nearest-neighbors.md  literature-ledger.md  literature-review-section-plan.md  manual-writing-brief.md  nearest-neighbor-comparison.md  outline-options.md  overnight-session-2026-05-10.md  paper-angle-matrix.md  paper-gap-register.md  pizza-import-plan.md  question-backlog.md  quote-and-evidence-bank.md  red-team-review-prompts.md  related-work-map.md  repo-source-map.md  reproduction-commands.md  research-prompts.md  result-validation-checklist.md  results-experiments-and-repro.md  reviewer-risk-register.md  strategy-and-venues.md  (+2 more)
scripts/: download_model.sh
specs/: CLAUDE.md  README.md  future-work.md  memoization.md  optimizer.md  paper-intelligence-consolidation.md  profiler.md
tests/: test_anthropic_patch.py  test_attention.py  test_executor.py  test_intercept.py  test_lifecycle.py  test_native.py  test_openai_patch.py  test_optimizer_glue.py  test_optimizer_shim.py  test_parallel_map.py  test_propagation.py  test_provenance.py  test_provenance_frameworks.py  test_shadow.py  test_span.py  test_trace_optimizer.py  test_writer.py
(+94 files in other folders)
