[workspace]
members = [
    "crates/agentc-core",
    "crates/agentc-embed",
    "crates/agentc-memo",
    "crates/agentc-optimizer",
    "crates/agentc-profiler",
    "crates/agentc-analyzer",
    "crates/agentc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AveryClapp/Agentc"

[workspace.dependencies]
# Internal crates
agentc-core = { path = "crates/agentc-core" }
agentc-embed = { path = "crates/agentc-embed" }
agentc-memo = { path = "crates/agentc-memo" }
agentc-analyzer = { path = "crates/agentc-analyzer" }
agentc-optimizer = { path = "crates/agentc-optimizer" }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
sha2 = "0.10"

# Compression
zstd = "0.13"

# Embeddings
model2vec-rs = "0.1"
half = "2"
once_cell = "1"
safetensors = "0.5"
tokenizers = "0.21"

# Filesystem
dirs = "6"
libc = "0.2"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Error handling
anyhow = "1"
thiserror = "2"
