[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "agentc"
version = "0.1.0"
description = "JIT optimization runtime for multi-step LLM agent workloads"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "wrapt>=1.16",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
dev = [
    "pytest>=8",
    "mypy>=1.10",
]

[tool.maturin]
python-source = "python"
module-name = "agentc._native"
features = ["pyo3/extension-module"]
manifest-path = "crates/agentc-profiler/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests", "bench"]

[tool.mypy]
python_version = "3.12"
strict = true
