[package]
name = "agentc-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agentc analyzer: waste detection, cost computation, reporting"

[dependencies]
agentc-core = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
