[package]
name = "agentc-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared embedding and LSH primitives for Agentc (model2vec potion-base-8M + hyperplane LSH)"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
half = { workspace = true }
model2vec-rs = { workspace = true }
once_cell = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tempfile = "3"
