[package]
name = "agentc-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agentc JIT optimizer: cost model, rewrite rules, audit ring buffer"

[dependencies]
agentc-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
