[package]
name = "agentc-profiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PyO3 bindings for Agentc profiler"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
agentc-core = { workspace = true }
agentc-embed = { workspace = true }
agentc-memo = { workspace = true }
agentc-optimizer = { workspace = true }
pyo3 = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
